--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
-dataset: "AAPM"
-data_root_aapm: /home/abel@local.tmvse.com/skhawy/Canon/Code/ADP_ContinualLearning/data/Training
+dataset:  "structseg" #"AAPM"
+num_classes: 7
+#data_root_aapm: /home/abel@local.tmvse.com/skhawy/Canon/Code/ADP_ContinualLearning/data/Training
 #data_root_aapm: /ADP_ContinualLearning/data/MultiOrgan/preprocessed # DGX
 verbose: False
 supress_logging: True
@@ -11,15 +12,15 @@ weight_decay: 0
 #output_predictions: True
 
 ## Frequently changed
-num_epochs: 30
-batch_size: 1 #16
+num_epochs: 80
+batch_size: 16 #16
 lr: 0.001
 #debug_mode: True  # turn this off after u r done debuggin, it affects the size of the dataset
 replay_mode:  LwF # ideal #
 
-name: "orderA_run0/" #"orderA_1dot2_bce_local" #   #"orderC_run2"  # "just_testing"
-message: "eval per scan" #"kd factor 0.01, bce factor 1 training orderA, run1"   #"kd factor 0.01, bce factor 1"
-#run_training: True
-run_evaluation: True
+name: "structseg_orderC/" #"orderA_1dot2_bce_local" #   #"orderC_run2"  # "just_testing"
+message: "lwf for structseg 1st trial" #"kd factor 0.01, bce factor 1 training orderA, run1"   #"kd factor 0.01, bce factor 1"
+run_training: True
+#run_evaluation: True
 
 #fine_tune: True
