Lwf ideal fine, ACLseg ideal needs another look

--- a/Adversarial-Continual-Learning/src/config.yaml
+++ b/Adversarial-Continual-Learning/src/config.yaml
@@ -22,8 +22,8 @@ ntasks: 6
 ##### evaluation options
 
 #
-#evaluate_only: True
-#eval_split: test # #test
+evaluate_only: True
+eval_split: test # #test
 #vis_seg: True
 #tsne: "yes"
 #extract_shared: "yes"
