should be nothing new, just saving code

--- a/Adversarial-Continual-Learning/src/config.yaml
+++ b/Adversarial-Continual-Learning/src/config.yaml
@@ -6,12 +6,12 @@
 
 ################ Frequently changed options ######################
 #name: "half_sized_model_same_score"
-name:  "structseg_orderA" #   "aapm_sp_rl_ll_heart_eso" #"all_6_ltrc_options" #"aapm_eso_h_ll_rl_sp" #"" #"aapm_eso_h_ll_rl_sp"  #""
+name:  "structseg_new_order" #   "aapm_sp_rl_ll_heart_eso" #"all_6_ltrc_options" #"aapm_eso_h_ll_rl_sp" #"" #"aapm_eso_h_ll_rl_sp"  #""
 message: ""
 nepochs: 50
 dataset:  structseg #AAPM # structseg # , LTRC, structseg
 #continue_train: True  # to continue training an existing model
-debug_mode: True
+#debug_mode: True
 which_network: aspp # old | normal | aspp
 
 
@@ -22,9 +22,9 @@ ntasks: 6
 ##### evaluation options
 
 #
-evaluate_only: True
-eval_split: test # #test
-calc_surfd: True
+#evaluate_only: True
+#eval_split: test # #test
+#calc_surfd: True
 #vis_seg: True
 #tsne: "yes"
 #extract_shared: "yes"
